--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,4 +11,5 @@ footer {
   font-family: var(--font-family);
   font-size: 16px;
   color: var(--text-color);
+  z-index: 12;
 }
