--- a/src/components/Sash.css
+++ b/src/components/Sash.css
@@ -1,8 +1,8 @@
 /* src/components/Sash.css */
 .sash-box {
   position: relative;
-  width: 300px;
-  height: 500px;
+  width: 400px;
+  height: 650px;
   background-color: #d34242;
   margin: 0 auto;
   display: flex;
@@ -12,6 +12,7 @@
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  overflow: hidden;
 }
 
 .sash-title {
@@ -34,9 +35,9 @@
 .sash {
   position: absolute;
   width: 70%;
-  height: 150%;
+  height: 140%;
   background: linear-gradient(to bottom, #c2b178, #b89b3f);
-  transform: rotate(-45deg);
+  transform: rotate(-44deg);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,6 +45,7 @@
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1; /* Ensure the sash is below the title */
+  overflow: hidden;
 }
 
 .badge {
